--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,5 +5,12 @@ header.AppHeader {
 
   display: flex;
   justify-content: center;
+  align-items: center;
 
+  padding: 10px;
+  box-shadow: 0 3px 6px rgba(0,0,0,.2);
+}
+
+header.AppHeader h1 {
+  font-size: 1.2em;
 }
