--- a/src/shared/Form/Form.scss
+++ b/src/shared/Form/Form.scss
@@ -3,6 +3,7 @@
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 3px 6px rgba(#000,.1);
+  padding: 20px;
 
   > *:not(:last-child) {
     margin-bottom: 20px;
